# Event-Manager

./: .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
core/: celery_app.py  settings.py  urls.py
events/: admin.py  models.py  tasks.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_status.py
events/templates/events/: home.html  list_event.html
users/: admin.py  authentication.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_is_active_alter_customuser_is_staff.py
users/templates/users/: base.html  login_custom_user.html  register_custom_user.html
