[tool.poetry]
name = "event-manager"
version = "0.1.0"
description = ""
authors = ["mimimichaello <137781824+mimimichaello@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.15"
celery = {version = "5.2.7", extras = ["redis"]}
psycopg2-binary = "^2.9.9"
flower = "2.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
